--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,170 +1,439 @@
-.backgroundImage {
+@font-face {
+    font-family: gotham-medium;
+    src: url('/public/fonts/Gotham/Gotham-Medium.otf');
+}
+
+@font-face {
+    font-family: gotham-book;
+    src: url('/public/fonts/Gotham/Gotham-Book.otf');
+}
+
+@font-face {
+    font-family: inter-semibold;
+    src: url('/public/fonts/Inter/Inter-SemiBold.ttf');
+}
+
+@font-face {
+    font-family: inter-regular;
+    src: url('/public/fonts/Inter/Inter-Regular.ttf');
+}
+
+.footerContainer {
     position: relative;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #101010;
     width: 100vw;
-    max-width: 1530px;
-    height: 617px;
+    height: 754px;
     margin: auto;
     overflow-x: hidden;
-    margin-top: -200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-end;
+
 }
-a { text-decoration: none; color: #dbdad7}
-a:visited { text-decoration: none; }
-a:hover { text-decoration: none; }
-a:focus { text-decoration: none; }
-a:hover, a:active { text-decoration: none; }
+
+a {
+    text-decoration: none;
+    color: #dbdad7
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:focus {
+    text-decoration: none;
+}
+
+a:hover, a:active {
+    text-decoration: none;
+}
 
 .footerName {
     align-items: flex-end;
 
 }
 
-.footerInfo {
-    position: absolute;
-    width: 100%;
-    height: 515px;
+.footerLeft {
+    height: 754px;
+    box-sizing: border-box;
     display: flex;
-    justify-content: center;
+    position: relative;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: flex-end;
+    align-items: flex-start;
+    margin-bottom: 100px;
 }
 
-
-
-.innerFooterInfo {
-    width: 1110px;
-    height: 515px;
+.topLeft {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    width: 330px;
+    height: 38px;
+    margin-bottom: 100px;
+
+}
+
+.spanJoin {
+    font: 500 30px'gotham-medium', normal;
+    line-height: 38px;
+    color: #FFFFFF;
+}
+
+
+
+.bottomLeft {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    width: 330px;
+    height: 221px;
+    justify-content: space-between;
+}
+
+.monetize {
+    position: relative;
+    width: 330px;
+    height: 30px;
+    margin-top: 20px;
+}
+
+.spanMonetize {
+    font: 400 16px'gotham-book', normal;
+    line-height: 30px;
+    color: #FFFFFF;
+}
+
+.social {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    position: relative;
+    width: 247px;
+    height: 30.3px;
+    justify-content: space-between;
+}
+
+.copyright {
+    position: relative;
+    width: 330px;
+    height: 24px;
+}
+
+.spanCopy {
+    font: 400 14px'gotham-book', normal;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+
+
+.footerRight {
+    height: 754px;
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-content: flex-start;
+    align-items: flex-start;
     justify-content: flex-end;
+    margin-bottom: 100px;
 }
 
-.TopFooterInfo {
-    width: 100%;
-    height: 120px;
+.topRight {
     display: flex;
+    position: relative;
+    margin-bottom: 100px;
+}
+
+.subscribe {
+    display: flex;
+    position: relative;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
-.rightFooterInfo {
-    width: 100%;
-    height: 100px;
-
-}
-
-.imgValuable {
-    width: 50%;
-    height: 70px;
+.form {
     display: flex;
-
-}
-
-.footerLogo {
-    width: 50px;
-    height: 58px;
-}
-
-.offerwallBox {
-    width: 220px;
-    height: 58px;
-    padding-left: 12px;
-
-}
-
-.offerwall {
-
-    color: var(--White, #FFF);
-    /*font-family: NordiquePro-Bold;*/
-    font: 400 30px/0% "NordiquePro-Bold", sans-serif;
-    font-size: 30px;
-    font-weight: 500;
-    line-height: 30px;
-
-}
-
-.monetization {
-    color: #E0FF22;
-    font: 400 30px/0% "NordiquePro-Bold", sans-serif;
-    font-size: 30px;
-    font-style: bold;
-    font-weight: 500;
-    line-height: 30px;
-}
-
-.valuable {
-    width: 100%;
-    height: 40px;
-    font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 131.5%;
-    color: #FFF;
-}
-
-.leftFooterInfo {
-    width: 100%;
-    height: 80px;
-    display: flex;
+    position: relative;
+    width: 563px;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-
 }
 
-.info {
-    width: 100%;
-    height: 20px;
-}
 
-.rightInfo {
+
+.subscribeBox {
     display: flex;
+    position: relative;
     justify-content: space-between;
-    color: var(--Modal-grey-1, #DBDAD7);
-    font-family: Poppins, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+    box-sizing: border-box;
+    width: 325px;
+    height: 60px;
+
+}
+
+::placeholder {
+    font: 400 14px'gotham-book', normal;
+    color: #BABCCE;
+    line-height: 24px;
+
+}
+
+.inputE {
+    padding: 0px 15px;
+    width: 325px;
+    height: 60px;
+    border: 0.9375px solid #FFFFFF;
+    font: 400 14px'gotham-book', normal;
+    background-color: #101010;
+    line-height: 24px;
+    color: #BABCCE;
+}
+
+.alertMessage {
+    color: #BABCCE;
+    font: 400 16px'gotham-book', normal;
+    margin: 15px 0px;
+}
+
+.submit {
+    display: flex;
+    position: relative;
+    width: 210px;
+    height: 60px;
+
+}
+
+.submitButton {
+    position: relative;
+    width: 210px;
+    height: 60px;
+    background: #FFFFFF;
+    color: #1E1E1E;
+    font: 500 16px 'gotham-medium', normal;
+    line-height: 15px;
     text-transform: uppercase;
-
+    border: 0.9375px solid #FFFFFF;
 }
 
-.leftInfo {
-    width: 20%;
-    height: 100px;
+.bottomRight {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding-bottom: 5px;
+    flex-direction: row;
+    position: relative;
+    width: 563px;
+    height: 215px;
+    align-content: flex-start;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
 
-.footerDivider {
-    height: 1px;
-    width: 1110px;
-
+.spanTitleBottom {
+    font: 600 16px 'inter-semibold', normal;
+    line-height: 30px;
+    color: #FFFFFF;
 }
 
-.footerDivider>hr {
-    border: 0.5px solid #DEDEDE
+.spanTextBottom {
+    font: 400 14px 'inter-regular', normal;
+    line-height: 24px;
+    color: #FFFFFF;
+    margin-top: 16px;
 }
 
-.downFooterInfo {
-    width: 100%;
-    height: 103px;
-    font-size: 16px;
-    font-family: 'Poppins', sans-serif;
-    color: #DBDAD7;
+.supportedBy {
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    flex-direction: column;
+    position: relative;
+    height: 215px;
+    justify-content: space-between;
 }
+
+.company {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.services {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.legal {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
 
 
 /*MOBILE RESPONSIVENESS*/
-@media only screen and (max-width: 1280px) and (min-width: 320px) {
+@media only screen and (max-width: 1130px) and (min-width: 393px) {
 
-    .footerName {
+
+    .footer,
+    .footer * {
+        box-sizing: border-box;
+
+    }
+
+    .footerContainer {
+        width: 100vw;
+        height: auto;
+        flex-direction: column;
+        margin-top: 0px;
+        justify-content: space-between;
+        align-items: center;
+        padding-bottom: 250px;
+    }
+
+    .footerLeft {
+        box-sizing: border-box;
+        margin-top: 0px;
+        height: 520px;
+        width: 100vw;
         display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
+
+    .heroBackground {
+        display: none;
+
+
+    }
+
+    .heroBackgroundMobile {
+        position: absolute;
+        inset: 0;
+        text-align: center;
+        width: 100%;
+        display: block;
+        margin-top: 100px;
+    }
+
+    .heroH2 {
+        color: #1e1e1e;
+        text-align: left;
+        font: 400 14px "Poppins", sans-serif;
+        position: relative;
+        top: 375px;
+        width: 352px;
+    }
+
+    .heroGetInTouch {
+        text-align: center;
+    }
+
+    .getIn {
+        font: 700 24px "Poppins", sans-serif;
+    }
+
+    .touch {
+        font: 700 24px "Poppins", sans-serif;
+    }
+
+    .footerRight {
+        box-sizing: border-box;
+        margin-top: 0px;
+        width: 100vw;
+        height: 852px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contactForm {
+        font: 400 14px "Poppins", sans-serif;
+        align-items: center;
+
+    }
+
+    .contactEmail {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        margin-top: 20px;
+        inset: 0;
+    }
+
+    .contactSubject {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        margin-top: 20px;
+        inset: 0;
+    }
+
+
+    .contactMessage {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        margin-top: 20px;
+        inset: 0;
+    }
+
+
+    .dataBox {
+        width: 352px;
+        margin-top: 10px;
+        position: relative;
+    }
+
+    .messageBox {
+        border-style: solid;
+        border-color: #1e1e1e;
+        border-width: 1px;
+        width: 352px;
+        height: 157px;
+        margin-top: 10px;
+        position: relative;
+        overflow: auto;
+        resize: none;
+    }
+
+    .errorMessage {
+        color: #ff0000;
+        font-size: 15px;
+    }
+
+
+    .sendGroup {
+        display: flex;
+        position: relative;
+        overflow: visible;
+        flex-direction: column;
+        margin-top: 50px;
+        margin-left: 1px;
+    }
+
+
+
+    .sendText {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .sendButton {
+        position: relative;
+        overflow: visible;
     }
 
     .backgroundImage {
