--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,11 +1,12 @@
-
 .home,
 .home * {
     box-sizing: border-box;
-  }
-  *, *:before, *:after {
+}
+
+*, *:before, *:after {
     box-sizing: inherit;
-  }
+}
+
 h1 {
     margin: 0;
 }
@@ -40,7 +41,7 @@ h2 {
 }
 
 
-.gradientContainer{
+.gradientContainer {
     width: 100%;
     max-width: 1530px;
     position: absolute;
@@ -48,7 +49,7 @@ h2 {
 
 
 
-.gradientContainerLeft{
+.gradientContainerLeft {
     /* background-color: rgba(76, 175, 80, 0.4); */
     z-index: 3;
     position: absolute;
@@ -99,17 +100,19 @@ h2 {
     font-size: 55px;
     font-style: normal;
     font-weight: 700;
-    line-height: 131.5%; /* 72.325px */
+    line-height: 131.5%;
+    /* 72.325px */
     z-index: 5;
 }
 
-.text2{
+.text2 {
     color: var(--White, #FFF);
     font-family: gotham-light;
     font-size: 55px;
     font-style: normal;
     font-weight: 400;
-    line-height: 131.5%; /* 72.325px */
+    line-height: 131.5%;
+    /* 72.325px */
     z-index: 5;
 }
 
@@ -123,7 +126,7 @@ h2 {
 .innerParag {
     color: #FFF;
     width: 80%;
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings: 'clig'off, 'liga'off;
     font-family: gotham-light;
     font-size: 18px;
     font-style: normal;
@@ -132,7 +135,7 @@ h2 {
 
 }
 
-.buttonText{
+.buttonText {
     width: 90%;
     display: flex;
     justify-content: space-between;
@@ -141,7 +144,7 @@ h2 {
     margin-bottom: 30px;
 }
 
-.buttonText1, .buttonText2{
+.buttonText1, .buttonText2 {
     border: 1px solid #FFF;
     width: 220px;
     height: 46px;
@@ -176,20 +179,21 @@ h2 {
 
 
 
-@font-face{
+@font-face {
     font-family: gotham-light;
     src: url('/public/fonts/Gotham/Gotham-Light.otf');
- }
+}
 
 .bottomHero h2 {
     color: #FFF;
     width: 200px;
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings: 'clig'off, 'liga'off;
     font-family: gotham-light;
     font-size: 12.6px;
     font-style: normal;
     font-weight: 400;
-    line-height: 26px; /* 185.714% */
+    line-height: 26px;
+    /* 185.714% */
 }
 
 .bottomHero1 {
@@ -197,18 +201,19 @@ h2 {
     height: 34px;
     flex-shrink: 0;
     color: #FFF;
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings: 'clig'off, 'liga'off;
     font-family: gotham-light;
     font-size: 50px;
     font-style: normal;
     font-weight: 500;
-    line-height: 30px; /* 60% */
+    line-height: 30px;
+    /* 60% */
     letter-spacing: -2.25px;
 }
 
 
 
-.bottomHero2{
+.bottomHero2 {
     display: flex;
     width: 167.873px;
     height: 42px;
@@ -216,12 +221,13 @@ h2 {
     justify-content: center;
     flex-shrink: 0;
     color: #FFF;
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings: 'clig'off, 'liga'off;
     font-family: gotham-light;
     font-size: 50px;
     font-style: normal;
     font-weight: 500;
-    line-height: 24px; /* 48% */
+    line-height: 24px;
+    /* 48% */
     letter-spacing: -2.25px;
 }
 
@@ -252,6 +258,7 @@ h2 {
     height: 600px;
     transition: all 2s ease;
 }
+
 /*
 .leftImg:hover {
     overflow: hidden;
@@ -300,11 +307,11 @@ h2 {
     height: 950px;
 }
 
-.mobileSecondHomeContainer{
+.mobileSecondHomeContainer {
     display: none;
 }
 
-.secondHomeContainerBox1{
+.secondHomeContainerBox1 {
     width: 1100px;
     display: flex;
     flex-direction: row;
@@ -325,12 +332,13 @@ h2 {
 .secondLeft {
     color: #1E1E1E;
 
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings: 'clig'off, 'liga'off;
     font-family: gotham-light;
     font-size: 47.7px;
     font-style: normal;
     font-weight: 500;
-    line-height: 120%; /* 63.6px */
+    line-height: 120%;
+    /* 63.6px */
     letter-spacing: -0.265px;
 }
 
@@ -410,7 +418,7 @@ h2 {
 }
 
 
-.secondHomeContainerBox4{
+.secondHomeContainerBox4 {
     display: inline-flex;
     flex-direction: row;
     gap: 100px;
@@ -423,48 +431,52 @@ h2 {
 .firstImgText {
     color: #1E1E1E;
     text-align: center;
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings: 'clig'off, 'liga'off;
     font-family: gotham-light;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    line-height: 20.446px; /* 127.785% */
+    line-height: 20.446px;
+    /* 127.785% */
     width: 200px;
 }
 
 .secondImgText {
     color: #1E1E1E;
     text-align: center;
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings: 'clig'off, 'liga'off;
     font-family: gotham-light;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    line-height: 20.446px; /* 127.785% */
+    line-height: 20.446px;
+    /* 127.785% */
     width: 200px;
 }
 
 .thirdImgText {
     color: #1E1E1E;
     text-align: center;
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings: 'clig'off, 'liga'off;
     font-family: gotham-light;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    line-height: 20.446px; /* 127.785% */
+    line-height: 20.446px;
+    /* 127.785% */
     width: 200px;
 }
 
 .fourthImgText {
     color: #1E1E1E;
     text-align: center;
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings: 'clig'off, 'liga'off;
     font-family: gotham-light;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
-    line-height: 20.446px; /* 127.785% */
+    line-height: 20.446px;
+    /* 127.785% */
     width: 200px;
 }
 
@@ -485,7 +497,7 @@ h2 {
     display: none;
 }
 
-.thirdHomeContainerBox  {
+.thirdHomeContainerBox {
     height: 950px;
     width: 100%;
     display: flex;
@@ -501,7 +513,7 @@ h2 {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-end;
-    
+
 }
 
 .thirdSectionLeft {
@@ -511,6 +523,7 @@ h2 {
     justify-content: flex-start;
 
 }
+
 .thirdSectionLeftBG {
     display: block;
     width: 860px;
@@ -521,7 +534,7 @@ h2 {
     box-shadow: -147px -139px 120px 20px rgba(0, 0, 0, 0.48) inset;
 }
 
-.thirdHomeImage{
+.thirdHomeImage {
     width: 100%;
     height: 700px;
     display: flex;
@@ -537,25 +550,26 @@ h2 {
     flex-direction: column;
     margin-top: 170px;
     margin-left: 100px;
-    
+
 }
 
 .innerThirdSectionRight {
     display: flex;
     width: 585px;
-    
+
 }
 
 .thirdSectionRightH1,
 .with {
     color: #1E1E1E;
 
-    font-feature-settings: 'clig' off, 'liga' off;
+    font-feature-settings: 'clig'off, 'liga'off;
     font-family: gotham-light;
     font-size: 47.7px;
     font-style: normal;
     font-weight: 500;
-    line-height: 120%; /* 63.6px */
+    line-height: 120%;
+    /* 63.6px */
 }
 
 
@@ -577,10 +591,10 @@ h2 {
     height: 110px;
 }
 
-.thirdSectionRightList > li {
+.thirdSectionRightList>li {
     display: flex;
     height: 50px;
-    background: url(/public/bulletListIcon.svg) left ;
+    background: url(/public/bulletListIcon.svg) left;
     background-size: 2rem;
     background-repeat: no-repeat;
     padding-left: 50px;
@@ -596,7 +610,7 @@ h2 {
     margin-top: 230px;
 }
 
-.buttonText1Gold{
+.buttonText1Gold {
     border: 1px solid #A18129;
     background: #A18129;
     width: 220px;
@@ -669,7 +683,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
- }
+}
 
 .fourthBox2Container {
     display: flex;
@@ -693,29 +707,24 @@ h2 {
     margin-left: 25px;
 }
 
-.fourth13One, .fourth13Two, .fourth24One, .fourth24Two{
+.fourth13One, .fourth13Two, .fourth24One, .fourth24Two {
     width: 542px;
     height: 300px;
     display: flex;
     align-items: center;
     border: #F8F8F8 1px solid;
     box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.07);
-    
+
 
 }
 
 .fourth13One, .fourth24One {
     margin-bottom: 50px
-    
 }
 
-.fourth13One, .fourth13Two{
-    
-}
+.fourth13One, .fourth13Two {}
 
-.fourth24One, .fourth24Two{
-    
-}
+.fourth24One, .fourth24Two {}
 
 .innerOne {
     width: 100%;
@@ -727,7 +736,7 @@ h2 {
     align-items: flex-start;
 }
 
-.innerOne h1{
+.innerOne h1 {
     color: var(--Primary-Black-1, #1E1E1E);
     font-family: gotham-light;
     font-size: 22px;
@@ -737,7 +746,7 @@ h2 {
     margin-bottom: 15px;
 }
 
-.stepOneImg{
+.stepOneImg {
     margin-top: -10px;
     margin-bottom: 25px;
     height: 45px;
@@ -757,7 +766,7 @@ h2 {
 }
 
 
-.innerTwo h1{
+.innerTwo h1 {
     color: var(--Primary-Black-1, #1E1E1E);
     font-family: gotham-light;
     font-size: 22px;
@@ -767,7 +776,7 @@ h2 {
     margin-bottom: 15px;
 }
 
-.stepTwoImg{
+.stepTwoImg {
     margin-top: 10px;
     margin-bottom: 25px;
     height: 45px;
@@ -787,7 +796,7 @@ h2 {
     align-items: flex-start;
 }
 
-.innerThree h1{
+.innerThree h1 {
     color: var(--Primary-Black-1, #1E1E1E);
     font-family: gotham-light;
     font-size: 22px;
@@ -797,7 +806,7 @@ h2 {
     margin-bottom: 15px;
 }
 
-.stepThreeImg{
+.stepThreeImg {
     margin-top: -30px;
     margin-bottom: 25px;
     height: 45px;
@@ -817,7 +826,7 @@ h2 {
     align-items: flex-start;
 }
 
-.innerFour h1{
+.innerFour h1 {
     color: var(--Primary-Black-1, #1E1E1E);
     font-family: gotham-light;
     font-size: 22px;
@@ -827,7 +836,7 @@ h2 {
     margin-bottom: 15px;
 }
 
-.stepFourImg{
+.stepFourImg {
     margin-top: -60px;
     margin-bottom: 25px;
     height: 50px;
@@ -891,7 +900,7 @@ h2 {
 }
 
 .fourthImg2:hover {
-    transform:  scale(1.2);
+    transform: scale(1.2);
 
 }
 
@@ -948,7 +957,7 @@ h2 {
 }
 
 .fifthHomeBackground {
-    width: 100%; 
+    width: 100%;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -958,13 +967,11 @@ h2 {
     z-index: 5;
 }
 
-.bottomBG{
-    background-color: #000000;
-    width: 100%;
-    height: 160px;
+.bottomBG {
     margin-top: -160px;
     z-index: -5;
 }
+
 .mobileFifthHomeContainer {
     display: none;
 }
@@ -1134,6 +1141,7 @@ h2 {
     justify-content: center;
 
 }
+
 .innerSixthBox2 {
     display: flex;
     justify-content: space-between;
@@ -1198,7 +1206,7 @@ h2 {
     z-index: 1;
 }
 
-.seventhMobileHomeContainer{
+.seventhMobileHomeContainer {
     display: none;
 }
 
@@ -1344,7 +1352,7 @@ h2 {
     border-radius: 10px 10px 0 0;
 }
 
-.topRightSeven > img {
+.topRightSeven>img {
     width: 100%;
     height: 330px;
 }
@@ -1401,7 +1409,7 @@ h2 {
 
 }
 
-.imgTime > img {
+.imgTime>img {
     width: 24px;
     height: 24px;
 }
@@ -1464,7 +1472,7 @@ h2 {
     background: #DFDFDE;
 }
 
-.topLeftSeven > img {
+.topLeftSeven>img {
     width: 100%;
 }
 
@@ -1476,7 +1484,7 @@ h2 {
     align-items: center;
 }
 
-.mastering{
+.mastering {
     width: 382px;
     flex-shrink: 0;
     height: 80px;
@@ -1528,7 +1536,7 @@ h2 {
     background: #E7CAA2;
 }
 
-.belowLeftSeven > img {
+.belowLeftSeven>img {
     width: 100%;
 }
 
@@ -1635,9 +1643,11 @@ h2 {
 .footerName {
     display: flex;
     align-items: flex-end;
-    background-color: #F7F8FC;;
+    background-color: #F7F8FC;
+    ;
 
 }
+
 .footerInfo {
     position: absolute;
     width: 100%;
@@ -1688,7 +1698,7 @@ h2 {
 
 .offerwallBox {
     color: #FFF;
-    font: 400 30px/0%  "NordiquePro", sans-serif;
+    font: 400 30px/0% "NordiquePro", sans-serif;
     font-size: 28px;
     font-weight: 700;
     line-height: 30px;
@@ -1756,7 +1766,7 @@ h2 {
 
 }
 
-.footerDivider > hr {
+.footerDivider>hr {
     border: 0.5px solid #DEDEDE
 }
 
@@ -1778,11 +1788,11 @@ h2 {
 /*MOBILE RESPONSIVENESS*/
 
 
-@media only screen and (max-width: 1130px) and (min-width: 320px){
+@media only screen and (max-width: 1130px) and (min-width: 320px) {
 
 
     .homeContainer {
-        display:flex;
+        display: flex;
         flex-direction: column;
         justify-content: center;
         width: 100vw;
@@ -1801,7 +1811,7 @@ h2 {
         display: none;
     }
 
-   .mobileFirstHomeContainer {
+    .mobileFirstHomeContainer {
         background-color: #000000;
         display: flex;
         width: 100%;
@@ -1810,10 +1820,10 @@ h2 {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-   }
+    }
 
 
-    .topFirstBg{
+    .topFirstBg {
         display: none;
     }
 
@@ -1821,7 +1831,7 @@ h2 {
         display: flex;
         height: 1500px;
         width: 100%;
-        background-repeat: no-repeat ;
+        background-repeat: no-repeat;
         justify-content: center;
         background: url(/public/heroBackgroundMobile.svg) no-repeat right top 0;
     }
@@ -1829,7 +1839,8 @@ h2 {
 
     .mainFirstMobile {
         display: flex;
-        width: 352px;;
+        width: 352px;
+        ;
         height: 1305px;
         flex-direction: column;
         align-items: center;
@@ -1849,21 +1860,23 @@ h2 {
         font-size: 40px;
         font-style: normal;
         font-weight: 700;
-        line-height: 131.5%; /* 72.325px */
+        line-height: 131.5%;
+        /* 72.325px */
         z-index: 5;
     }
 
-    .text2Mobile{
+    .text2Mobile {
         color: var(--White, #FFF);
         font-family: gotham-light;
         font-size: 40px;
         font-style: normal;
         font-weight: 400;
-        line-height: 131.5%; /* 72.325px */
+        line-height: 131.5%;
+        /* 72.325px */
         z-index: 5;
     }
 
-    .bottomHeroMobile{
+    .bottomHeroMobile {
         margin-top: 30px;
         margin-bottom: 30px;
     }
@@ -1871,15 +1884,16 @@ h2 {
     .bottomHeroMobile h2 {
         color: #FFF;
         width: 200px;
-        font-feature-settings: 'clig' off, 'liga' off;
+        font-feature-settings: 'clig'off, 'liga'off;
         font-family: gotham-light;
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
-        line-height: 26px; /* 185.714% */
+        line-height: 26px;
+        /* 185.714% */
     }
 
-    .bottomHeroRightMobile{
+    .bottomHeroRightMobile {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -1892,12 +1906,13 @@ h2 {
         font-size: 30px;
         font-style: normal;
         font-weight: 700;
-        line-height: 30px; /* 60% */
+        line-height: 30px;
+        /* 60% */
         letter-spacing: -2.25px;
         margin-right: 35px;
     }
 
-    .bottomHeroLeftMobile{
+    .bottomHeroLeftMobile {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -1909,11 +1924,12 @@ h2 {
         font-size: 30px;
         font-style: normal;
         font-weight: 700;
-        line-height: 30px; /* 60% */
+        line-height: 30px;
+        /* 60% */
         letter-spacing: -2.25px;
         margin-right: 30px;
     }
-    
+
 
     .forMonetize {
         display: flex;
@@ -1934,7 +1950,8 @@ h2 {
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
-        line-height: 22px; /* 157.143% */
+        line-height: 22px;
+        /* 157.143% */
     }
 
     .buttonTextMobile {
@@ -1944,7 +1961,7 @@ h2 {
         justify-content: center;
     }
 
-    .buttonText1Mobile, .buttonText2Mobile{
+    .buttonText1Mobile, .buttonText2Mobile {
         border: 1px solid #FFF;
         width: 220px;
         height: 46px;
@@ -1976,7 +1993,7 @@ h2 {
         padding-top: 60px;
     }
 
-    .downClickImgMobile > img {
+    .downClickImgMobile>img {
         width: 144px;
         height: 144px;
     }
@@ -1988,7 +2005,7 @@ h2 {
         align-items: center;
         justify-content: center;
         z-index: 5;
-    
+
 
     }
 
