--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,7 @@ html, body {
   width: 100%;
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -16,9 +17,7 @@ body::-webkit-scrollbar-track {
 }
 
 /* Handle */
-body::-webkit-scrollbar-thumb {
-  background: rgb(1, 7, 11)
-}
+
 
 /* Handle on hover */
 body::-webkit-scrollbar-thumb:hover {
