--- a/src/pages/Game/Game.module.css
+++ b/src/pages/Game/Game.module.css
@@ -311,14 +311,15 @@ h2 {
 }
 
 .secondHomeContainerBox1 {
-    width: 500px;
+    width: 465px;
+    height: 480px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     position: relative;
     z-index: 2;
     align-items: flex-start;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .whatOffer {
@@ -339,33 +340,60 @@ h2 {
 }
 
 .secondRight {
-    width: 561px;
+    width: 450px;
+    height: 240px;
 }
 
 .innerAnOfferwall {
-    width: 76%;
+    width: inherit;
 }
 
 .anOfferwallParag {
-    color: var(--Primary-Black-1, #1E1E1E);
-    font-family: gotham-light;
+    color: #07090A;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Gotham;
     font-size: 18px;
     font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    text-align: left;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+    display: flex;
+    flex-direction: column;
+
+}
+
+.lowPercBox {
+    display: flex;
+
+}
+
+.lowPerc {
+    color: #07090A;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Gotham;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 30px;
+
 }
 
 .secondHomeContainerBox2 {
-    width: 700px;
+    width: 650px;
     height: 640px;
     flex-shrink: 0;
     margin-top: 50px;
+    position: relative;
+    z-index: 3;
+    top: 70px;
+    right: 55px;
+
 }
 
-.image1 {
-    min-width: 1920px;
-    max-width: 1920px;
+
+.secondHomeContainerBox2 > img {
+    width: 791.224px;
+    height: 640px;
+    flex-shrink: 0;
 }
 
 .secondHomeContainerBox3 {
@@ -476,7 +504,7 @@ h2 {
 
 /*THIRD SECTION*/
 
-.thirdHomeContainer {
+.thirdGameContainer {
     width: 100%;
     min-height: 950px;
     display: flex;
@@ -490,31 +518,25 @@ h2 {
     display: none;
 }
 
-.thirdHomeContainerBox {
+.thirdGameContainerBox {
     height: 950px;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.imageThirdHomeContainer {
-    width: 100%;
-    height: 950px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-end;
 
 }
+
 
 .thirdSectionLeft {
-    width: 50%;
-    height: 100%;
+    width: 770px;
+    height: inherit;
     display: flex;
     justify-content: flex-start;
+}
 
+.thirdSectionLeft > img {
+    width: 780px;
+    height: 950px;
+    flex-shrink: 0;
 }
 
 .thirdSectionLeftBG {
@@ -538,19 +560,62 @@ h2 {
 }
 
 .thirdSectionRight {
-    width: 50%;
+    width: 748px;
+    background: #1E1E1E;
     display: flex;
-    flex-direction: column;
-    margin-top: 170px;
-    margin-left: 100px;
+    align-items: center;
+    justify-content: center;
+
 
 }
 
 .innerThirdSectionRight {
+    height: 450px;
+    width: 430px;
     display: flex;
-    width: 585px;
-
+    flex-direction: column;
+    justify-content: space-between;
 }
+
+.innerThirdAddWalls {
+    color: #FFF;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Gotham;
+    font-size: 53px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%; /* 63.6px */
+}
+
+.innerThirdInGame {
+    color: #FFF;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Gotham;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 166.667% */
+    display: flex;
+    flex-direction: column;
+}
+
+.innerThirdCombined {
+    display: flex;
+}
+
+.innerThirdBold {
+    color: #FFF;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Gotham;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: Bold;
+    line-height: 30px;
+}
+
+
+
+
 
 .thirdSectionRightH1,
 .with {
