--- a/src/pages/Game/Game.module.css
+++ b/src/pages/Game/Game.module.css
@@ -598,7 +598,7 @@ h2 {
 }
 
 .uniqueOffers {
-    width: 450px;
+    width: 490px;
     height: 190px;
     color: #1E1E1E;
     font-feature-settings: 'clig' off, 'liga' off;
@@ -738,151 +738,140 @@ h2 {
 
 /*FIFTH SECTION*/
 
-.fifthHomeContainer {
-    background-color: #F0F0F0;
+.fifthGameContainer {
+    background-color: #FFFFF;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 1010px;
 }
 
-.fifthHomeBackground {
+.fifthGameBackground {
     width: 100%;
-    height: 80%;
+    height: 801px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
     margin-top: 0;
     z-index: 5;
 }
 
-.bottomBG {
-    margin-top: -160px;
-    z-index: -5;
+.fifthGameLeft {
+    width: 729px;
+    height: 801px;
+    flex-shrink: 0;
+    border-radius: 0px 0px 120px 0px;
+    background: #1E1E1E;
+    box-shadow: -147px -139px 120px 20px rgba(0, 0, 0, 0.48) inset;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fifthGameRight{
+    width: 729px;
+    height: 801px;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+
+}
+
+.innerFifthGameRight {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 524px;
+    height: 580px;
+}
+
+.fifthGameRightModel {
+    color: #1E1E1E;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Gotham-medium;
+    font-size: 53px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%; /* 63.6px */
+}
+
+@font-face {
+    font-family: Gotham-medium;
+    src: url('/public/fonts/Gotham/Gotham-Medium.otf');
+}
+
+.increaseSubscription{
+    color: #1E1E1E;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Gotham-light;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 200% */
+}
+
+@font-face {
+    font-family: Gotham-light;
+    src: url('/public/fonts/Gotham/Gotham-Light.otf');
+}
+
+.smatchInreaseOnline {
+    width: 520px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.industryNews {
+    width: 490px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.increaseRate {
+    color: #1E1E1E;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Gotham;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 30px;
+}
+
+
+
+.buttonTextDemo {
+    width: 524px;
+    height: 60px;
+}
+
+.buttonTextDemo1 {
+    width: 210px;
+    height: 60px;
+    color: #FFF;
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Gotham-medium;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 38px; /* 237.5% */
+    text-transform: uppercase;
+    gap: 24px;
+    border: 1px solid #A18129;
+    background: #A18129;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .mobileFifthHomeContainer {
     display: none;
 }
 
-.innerFifthHomeContainer1 {
-    width: 1365px;
-    height: 495px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    background-image: url(/public/fifthHomeImage.svg);
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover;
 
-}
 
-.innerFifthLeft {
-    width: 55%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-.innerFifthRight {
-    width: 45%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-.innerFifthMainBox1 {
-    width: 555px;
-    height: 100px;
-    margin-top: 100px;
-
-}
-
-.innerFifthBox1, .highest {
-    color: var(--White, #FFF);
-    font-family: gotham-light, sans-serif;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    width: 100%;
-    display: flex;
-
-}
-
-.innerFifthMainBox2 {
-    width: 500px;
-
-}
-
-.engagement {
-    color: var(--White, #E0FF22);
-    font-family: gotham-light, sans-serif;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    width: 50%;
-}
-
-.innerFifthMainBox2 {
-    color: var(--White, #FFF);
-    font-family: gotham-light;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 30px;
-}
-
-.noInAppPurchase {
-    width: 50%;
-    height: 150px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.appPerc {
-    width: 176px;
-    color: #E0FF22;
-    text-align: center;
-    font-family: gotham-light;
-    font-size: 80px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: -2.4px;
-    height: 88px;
-    flex-shrink: 0;
-}
-
-.makeInApp {
-    color: #BCBCBC;
-    text-align: center;
-    font-family: gotham-light, sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.50px;
-    width: 137px;
-}
-
-.onlyMakeOnePurchase {
-    width: 50%;
-    height: 150px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
 
 
 /*SIXTH SECTION*/
